# mini-ipc

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
bridge/: CMakeLists.txt
bridge/include/mini_ipc/: bridge_dispatcher.hpp  websocket_server.hpp  websocket_session.hpp
bridge/src/: bridge_dispatcher.cpp  main.cpp  websocket_server.cpp  websocket_session.cpp
core/: CMakeLists.txt
core/config/: comm.yaml
core/examples/: CMakeLists.txt  discovery_daemon.cpp  listener.cpp  talker.cpp
core/include/mini_ipc/: node.hpp  param_manager.hpp  publisher.hpp  subscriber.hpp
core/src/: discovery_daemon.cpp  node.cpp  param_manager.cpp
dashboard/: index.html  package-lock.json  package.json  tsconfig.json
dashboard/src/: App.vue  styles.css
dashboard/src/api/: wsClient.js  wsClient.ts
